# cipp-consultant-agent

./: .env.example  .gitignore  README.md  REPO_RAKENNE_JA_TOIMINTA.md  SOTA_PostgreSQL_CIPP_urakkasopimus_template.md  docker-compose.yml  pyproject.toml  repo_status.py  requirements.txt
apps/web/: .env.example  index.html  package-lock.json  package.json  playwright.config.ts
apps/web/src/: App.tsx  styles.css
apps/web/src/api/: client.ts
apps/web/src/auth/: authAdapter.ts  mockAuthAdapter.ts  supabaseAuthAdapter.ts  types.ts
apps/web/src/components/: AnswerCard.tsx  AuthPanel.tsx  QuestionPanel.tsx  SourcesPanel.tsx  StatusBadges.tsx  SuggestedQuestions.tsx  TopCaseBar.tsx  UncertaintyPanel.tsx
apps/web/src/config/: defaultCase.ts
apps/web/tests/: frontend-smoke.spec.ts
db/migrations/: 001_init.sql  002_source_file_document_types.sql  003_yse_1998_document_type.sql  004_construction_law_document_types.sql  005_optional_project_document_types.sql  006_sewer_segments.sql  007_project_operations.sql  008_knowledge_graph.sql  009_legal_guidance_documents.sql
db/queries/: compare_sewer_segments.sql  contractor_obligations.sql  document_precedence.sql  kg_entity_neighborhood.sql  kg_project_graph.sql  kg_project_readiness_summary.sql  kg_relation_evidence.sql  payment_schedule_total.sql  retrieval_entity_search.sql  retrieval_evidence_context.sql  retrieval_kg_neighborhood.sql  retrieval_user_case_candidates.sql  search_full_text.sql
docs/: frontend_testing.md  supabase_auth_plan.md
scripts/: run_frontend_dev.ps1
src/cipp_contracts/: __init__.py  config.py  jsonio.py  model.py
src/cipp_contracts/answer/: __init__.py  compose_answer.py  cost_estimator.py  report_answer_smoke_matrix.py
src/cipp_contracts/api/: __init__.py  dev_server.py  schemas.py
src/cipp_contracts/embed/: __init__.py
src/cipp_contracts/extract/: __init__.py  build_markdown.py  extract_dwg_trueview.py  extract_office_text.py  extract_pdf_pages.py  extract_remaining_text.py  extract_visual_ocr.py  import_finlex_legal_xml.py  import_project_operations.py  inventory_source_files.py  report_processing_quality.py
src/cipp_contracts/kg/: __init__.py  build_knowledge_graph.py
src/cipp_contracts/legal/: __init__.py  import_guidance_pdf.py
src/cipp_contracts/load/: __init__.py  link_contract_documents.py  load_contract_package.py  load_markdown_sections.py
src/cipp_contracts/normalize/: __init__.py  build_canonical_contract.py  build_project_canonical.py  enrich_canonical_from_markdown.py  payment_schedule_facts.py  report_reference_facts.py  rfq_facts.py  sync_rfq_facts.py
src/cipp_contracts/price/: __init__.py  estimate_jv_price.py
src/cipp_contracts/retrieve/: __init__.py  build_retrieval_packet.py  report_retrieval_smoke_matrix.py
src/cipp_contracts/search/: __init__.py
src/cipp_contracts/validate/: __init__.py  validate_canonical_contract.py
tests/: test_answer_smoke_matrix.py  test_build_knowledge_graph.py  test_build_retrieval_packet.py  test_compose_answer.py  test_cost_estimator.py  test_dev_api.py  test_estimate_jv_price.py  test_extracted_markdown_sections.py  test_guidance_kg_integration.py  test_guidance_retrieval.py  test_import_legal_guidance_pdf.py  test_knowledge_graph_schema.py  test_legal_guidance_items.py  test_payment_schedule_facts.py  test_processing_quality_report.py  test_reference_facts_report.py  test_retrieval_smoke_matrix.py  test_rfq_facts.py  test_validate_canonical_contract.py
tests/eval_questions/: pilot_001.jsonl  reference_001.jsonl
